// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header snapshot tests should match snapshot with cv secton 1`] = `
<header
  className="false-slide"
>
  <nav>
    <ul>
      <ul
        className="left-menu"
      >
        <li>
          <a
            className="sections-toggle"
            data-testid="sections-toggle"
            href="/#"
            onClick={[Function]}
          >
            <Rect
              height={90}
              radius={40}
              width={200}
            />
            <span
              data-testid="projects"
            >
              Projects
              <Arrow />
            </span>
          </a>
        </li>
        <li
          className="slide-left"
        >
          <button
            onClick={[Function]}
          >
            <Circle />
            <Arrow />
          </button>
        </li>
      </ul>
      <li
        className="slide-right"
      >
        <button
          onClick={[Function]}
        >
          <Circle />
          <Arrow />
        </button>
      </li>
    </ul>
  </nav>
</header>
`;

exports[`Header snapshot tests should match snapshot with projects secton 1`] = `
<header
  className="true-slide"
>
  <nav>
    <ul>
      <ul
        className="left-menu"
      >
        <li>
          <a
            className="sections-toggle"
            data-testid="sections-toggle"
            href="/#"
            onClick={[Function]}
          >
            <Rect
              height={90}
              radius={40}
              width={200}
            />
            <span
              data-testid="cv"
            >
              Cv
              <Arrow />
            </span>
          </a>
        </li>
        <li
          className="slide-left"
        >
          <button
            onClick={[Function]}
          >
            <Circle />
            <Arrow />
          </button>
        </li>
      </ul>
      <li
        className="slide-right"
      >
        <button
          onClick={[Function]}
        >
          <Circle />
          <Arrow />
        </button>
      </li>
    </ul>
  </nav>
</header>
`;
